[package]
name = "oz-fhe-primitives"
authors = { workspace = true }
description = "FHE Primitives"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
frame-system = { workspace = true }
frame-support = { workspace = true }
hex-literal = { version = "0.4.1", default-features = false }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

tfhe = { version = "1.3.3", optional = true, features = ["integer"] }
bincode = { version = "1.3.3", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = [ "std" ]
std = [
    "frame-system/std",
    "frame-support/std",
	"parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime-interface/std",
	"sp-std/std",
    # host-only deps (IMPORTANT: activates the optional crates)
    "dep:tfhe",
    "dep:bincode",
    "dep:serde",
]
fhe-dev = []
