[package]
name = "pallet-zk-elgamal-verifier"
authors = { workspace = true }
description = "Pallet to verify ZK ElGamal Proofs by Prover"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

# no_std crypto
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
merlin            = { version = "3", default-features = false }
subtle            = { version = "2", default-features = false }

ca-primitives = { path = "../ca-primitives", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "blake2/std",
  "ca-primitives/std",
  "merlin/std",
  "subtle/std",
  "sha2/std",
]
