[package]
name = "pallet-zk-elgamal-verifier"
authors = { workspace = true }
description = "Pallet to verify ZK ElGamal Proofs by Prover"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

# no_std crypto
bulletproofs      = { version = "4", default-features = false }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
merlin            = { version = "3", default-features = false }
subtle            = { version = "2", default-features = false }
curve25519-dalek-ng = { version = "4.1.1", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false } # only for traits

ca-primitives = { path = "../ca-primitives", default-features = false }
primitives-zk-elgamal = { path = "../primitives-zk-elgamal", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

# only needed for tests but throws errors if put in dev-dependecies
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
zk-elgamal-verifier = { path = "../zk-elgamal-verifier" }
zk-elgamal-prover = { path = "../zk-elgamal-prover" }
sp-core = { workspace = true }
sp-io = { workspace = true }
rand              = { version = "0.9.2", features = ["std", "std_rng"] }
rand_chacha       = "0.9"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "blake2/std",
  "ca-primitives/std",
  "primitives-zk-elgamal/std",
  "merlin/std",
  "subtle/std",
  "sha2/std",
  "curve25519-dalek-ng/std",
  "bulletproofs/std",
  "rand_core/std",
  "pallet-balances/std",
]
