[package]
name = "zk-elgamal-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1", features = ["serde", "alloc"] }
merlin            = { version = "3" }
rand              = { version = "0.9.2", features = ["std", "std_rng"] }
rand_chacha       = "0.9"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "2.0.17"

# Optional: Bulletproofs (std) for the sender range proof
bulletproofs      = { version = "5", default-features = true, features = ["yoloproofs"] } # or your preferred fork

# For the CLI
clap              = { version = "4", features = ["derive"] }
hex               = "0.4"
