[package]
name = "zk-elgamal-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["serde", "alloc"] }
curve25519-dalek-ng = "4.1.1" 
merlin            = { version = "3" }
rand              = { version = "0.9.2", features = ["std", "std_rng"] }
rand_chacha       = "0.9"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "2.0.17"
primitives-zk-elgamal = { path = "../primitives-zk-elgamal" }
bulletproofs      = { version = "4", default-features = true }
solana-zk-sdk = { version = "4" }
sha2 = "0.10.9"
