[package]
name = "oz-wrappers"
authors = { workspace = true }
# TODO: move to be shared between templates one directory up
# => pin dependencies to crate (no workspace)
description = "sensible pallets configs for parachain runtimes used in the templates"
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
frame-support = { workspace = true }
frame-support-procedural = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-version = { workspace = true }

polkadot-runtime-common = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support-procedural/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
]
async-backing = []
experimental = []
