[package]
name = "primitives"
authors = { workspace = true }
# TODO: move to be shared between templates one directory up
# => pin dependencies to crate (no workspace)
description = "primitive types used in the runtime"
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
    "sp-core/std",
    "sp-runtime/std"
]
